# KetangPai-CheckInHelper

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: pytest.yml
app/: api.py  db.py  deps.py  index.html  login.html  main.py  models.py  security.py  sessions.py  utils.py
app/core/: api.py  db.py  log_cleanup.py  schema_sync.py  security.py  sessions.py  settings.py  watcher.py
app/routers/: __init__.py  account.py  auth.py  checkin.py  course.py  invite_code.py  log.py  settings.py  user.py
docs/: ketangpai-api.md
scripts/: backfill_accounts.py
static/: common.css  index.css  index.js  login.css  login.js  material-icons.css  test.html
tests/: conftest.py  test_db.py  test_log_cleanup.py  test_models.py  test_schema_sync.py  test_security.py  test_utils.py
tests/routers/: test_account.py  test_auth.py  test_auto_checkin.py  test_benchmark_checkin.py  test_course.py  test_log.py
