[project]
name = "checkinhelper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=49.0.0",
    "fastapi>=0.138.1",
    "httpx>=0.27.0",
    "passlib[argon2]>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
]
